--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
     
     <section class="content">
         <div class="box">
-            <h2>What?</h2>
-            <p>Used to ask about the reason for something</p>
-        </div>
-        <div class="box">
-            <h2>Where?</h2>
-            <p>Used when referring to a particular stage in a process or activity</p>
-        </div>
-        <div class="box">
-            <h2>How?</h2>
-            <p>Used to ask about someone's physical or emotional state</p>
+            <div class="item">
+                <h2>What?</h2>
+                <p>Used to ask about the reason for something</p>
+            </div>
+            <div class="item">
+                <h2>Where?</h2>
+                <p>Used when referring to a particular stage in a process or activity</p>
+            </div>
+            <div class="item">
+                <h2>How?</h2>
+                <p>Used to ask about someone's physical or emotional state</p>
+            </div>
         </div>
     </section>
     
