--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Webpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="lab1.css">
 </head>
 <body>
     <header>
@@ -13,18 +13,14 @@
     
     <section class="content">
         <div class="box">
-            <div class="item">
-                <h2>What?</h2>
-                <p>Used to ask about the reason for something</p>
-            </div>
-            <div class="item">
-                <h2>Where?</h2>
-                <p>Used when referring to a particular stage in a process or activity</p>
-            </div>
-            <div class="item">
-                <h2>How?</h2>
-                <p>Used to ask about someone's physical or emotional state</p>
-            </div>
+            <h2>What?</h2>
+            <p>Used to ask about the reason for something</p>
+            <br>
+            <h2>Where?</h2>
+            <p>Used when referring to a particular stage in a process or activity</p>
+            <br>
+            <h2>How?</h2>
+            <p>Used to ask about someone's physical or emotional state</p>
         </div>
     </section>
     
